# small_projects

./: README.md  README.txt
Lissajous Kurven/: Mengenzeiger4.py
Neurons/: testNeurons_1.py
PDFmerger/: README.md  mergePDF.py  mergePDFeasy.py  pyproject.toml
PDFmerger/src/: test_mergePDF.py
PDFmerger/src/pdfmerger/: pdf_merger.py
PDFmerger/tests/: test_pdf_merger.py
PEB/: tension.py
RL_Book_ex/: exerc_2_5.py  exerc_2_7.py
Spalten/: spalten.py
UNSORTED/: auto klein.py  botting.py  chaostext.txt  title_modifier.py
caesarcode_advanced/: README.md  pyproject.toml
caesarcode_advanced/src/caesarcode_advanced/: encoder.py
caesarcode_advanced/tests/: test_encoder.py
cfd/: Untitled-1.py  thomas_orig.py  thomas_phone.py
cluster/: main.py
dont even know anymore/: main.py
filter_matrix/: filtermatrizen.py  filtermatrizen_std.py
freecodecamp_exerc/: RPS.py  RPS_v2.py
gdfert/: analyseBewertung.py  bewertungen.CSV  bewertungen.xlsx
irmiVok/: raw.txt  vokabelFinder.py
irmi_vok/: vokabeln.txt
lissajous/: README.txt  kurven_basics4.py
semorai_skilltest/: README.md  pyproject.toml
semorai_skilltest/src/semorai_skilltest/: datasheet_crawler.py  excel_handler.py  excel_reader.py  main.py  pdf_crawler.py
semorai_skilltest/src/semorai_skilltest/resources/: Test_data.xlsx
semorai_skilltest/tests/: test_datasheet_crawler.py  test_excel_handler.py  test_excel_reader.py  test_main.py  test_pdf_crawler.py
semorai_skilltest/tests/resources/: .~lock.Test_data.xlsx#
spalten_mkl/: readme.txt
spirals_4_diemut/: README.md  diemut4.py
textSpeech/: textSpeech.py
tkintertest/: tkintertest.py
very much unsorted projects/: RD.py  Untitled-1.py  determinante.py  deutschewoerter.txt  interpolation.py  sortiere buchstaben.py  spacy.py  testNeurons_1.py  testcolors.py  testpyglet.py  testthing.py  tf_test2.py
