[project]
name = "PDFmerger"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Georg Pernice", email = "georgpernice@gmail.com"},
]
dependencies = [
    "pdm>=2.13.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
