[project]
name = "PDFmerger"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Georg Pernice", email = "georgpernice@gmail.com"},
]
dependencies = [
    "pdm>=2.13.2",
    "pytest>=8.1.1",
    "pikepdf>=8.14.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}
src = "src"

[tool.pdm]
distribution = false
