[project]
name = "caesarcode_advanced"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Georg Pernice", email = "georgpernice@gmail.com"},
]
dependencies = [
    "self>=2020.12.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
]
